kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: deployment-cicd
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: app-cicd
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-cicd
    spec:
      containers:
      #Replace image with ECR Image URL
      - image: 12345678910.dkr.ecr.us-east-1.amazonaws.com/simple-python-webapp
        imagePullPolicy: Always
        name: app-cicd
        ports:
        - containerPort: 5000
