kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: default
  name: service-cicd
spec:
  ports:
    - port: 80
      targetPort: 5000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: app-cicd
